--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <title>Text Formatting</title>
 </head>
 <body>
+  <h1>Title</h1>
+  <h2>Subtitle</h2>
+  <h3>Testing the h3</h3>
+<p>Hello world</p>
 
+
+<p>Hello Moon</p>
+Testing the body of the page.
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
